fixed spacing on games show page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -368,7 +368,7 @@ img.parallax-slider {
 }
 
 .detail {
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 .content {
@@ -377,7 +377,7 @@ img.parallax-slider {
 }
 
 .slider {
-  margin: 100px auto 50px;
+  margin: 80px auto 50px;
 }
 
 
